// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alerts /> renders Alerts correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        lg={9}
        md={9}
        sm={9}
        xs={9}
      >
        <DashboardCardTitle
          className={null}
        >
          Alerts
        </DashboardCardTitle>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        lg={3}
        md={3}
        sm={3}
        xs={3}
      >
        <DashboardCardActionsBody>
          <Dropdown
            choices={
              Array [
                "All",
                "Critical",
                "Warning",
              ]
            }
            disabled={false}
            id="alert-type"
            onChange={[Function]}
            value="All"
            withTooltips={false}
          />
        </DashboardCardActionsBody>
      </Col>
    </Row>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <AlertsBody>
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Disk inaccessible on host ip-10-0-154-62.ec2.internal (device xvda)",
              "message": "Disk is inaccessible",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephOSDDiskUnavailable",
              "severity": "critical",
            },
          }
        }
        key="alert-0"
      />
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Data recovery has been active for over 2h. Contact Support",
              "message": "Data recovery is slow",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephDataRecoveryTakingTooLong",
              "severity": "warning",
            },
          }
        }
        key="alert-1"
      />
    </AlertsBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Alerts /> renders Data Recovery correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        lg={9}
        md={9}
        sm={9}
        xs={9}
      >
        <DashboardCardTitle
          className={null}
        >
          Alerts
        </DashboardCardTitle>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        lg={3}
        md={3}
        sm={3}
        xs={3}
      >
        <DashboardCardActionsBody>
          <Dropdown
            choices={
              Array [
                "All",
                "Critical",
                "Warning",
              ]
            }
            disabled={false}
            id="alert-type"
            onChange={[Function]}
            value="All"
            withTooltips={false}
          />
        </DashboardCardActionsBody>
      </Col>
    </Row>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <AlertsBody>
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Data recovery has been active for over 2h. Contact Support",
              "message": "Data recovery is slow",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephDataRecoveryTakingTooLong",
              "severity": "warning",
            },
          }
        }
        key="alert-0"
      />
    </AlertsBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Alerts /> renders Disk Inaccessible correctly 1`] = `
<DashboardCard
  className={null}
>
  <DashboardCardHeader
    className={null}
  >
    <Row
      bsClass="row"
      componentClass="div"
    >
      <Col
        bsClass="col"
        componentClass="div"
        lg={9}
        md={9}
        sm={9}
        xs={9}
      >
        <DashboardCardTitle
          className={null}
        >
          Alerts
        </DashboardCardTitle>
      </Col>
      <Col
        bsClass="col"
        componentClass="div"
        lg={3}
        md={3}
        sm={3}
        xs={3}
      >
        <DashboardCardActionsBody>
          <Dropdown
            choices={
              Array [
                "All",
                "Critical",
                "Warning",
              ]
            }
            disabled={false}
            id="alert-type"
            onChange={[Function]}
            value="All"
            withTooltips={false}
          />
        </DashboardCardActionsBody>
      </Col>
    </Row>
  </DashboardCardHeader>
  <DashboardCardBody
    LoadingComponent={[Function]}
    isLoading={false}
  >
    <AlertsBody>
      <AlertItem
        alert={
          Object {
            "annotations": Object {
              "description": "Disk inaccessible on host ip-10-0-154-62.ec2.internal (device xvda)",
              "message": "Disk is inaccessible",
              "storage_type": "ceph",
            },
            "labels": Object {
              "alertname": "CephOSDDiskUnavailable",
              "severity": "critical",
            },
          }
        }
        key="alert-0"
      />
    </AlertsBody>
  </DashboardCardBody>
</DashboardCard>
`;

exports[`<Alerts /> renders Empty Alerts correctly 1`] = `""`;

exports[`<Alerts /> renders correctly with Provider 1`] = `
<div
  class="card-pf kubevirt-dashboard__card"
>
  <div
    class="card-pf-heading kubevirt-dashboard__card-heading"
  >
    <div
      class="row"
    >
      <div
        class="col-lg-9 col-md-9 col-sm-9 col-xs-9"
      >
        <h2
          class="card-pf-title kubevirt-dashboard__card-title"
        >
          Alerts
        </h2>
      </div>
      <div
        class="col-lg-3 col-md-3 col-sm-3 col-xs-3"
      >
        <div
          class="kubevirt-dashboard__actions-body"
        >
          <div
            class="btn-group btn-group-justified"
          >
            <div
              class="pf-c-dropdown kubevirt-dropdown"
            >
              <button
                aria-expanded="false"
                aria-haspopup="true"
                class="pf-c-dropdown__toggle"
                id="pf-toggle-id-5"
                type="button"
              >
                <span
                  class="pf-c-dropdown__toggle-text"
                >
                  All
                </span>
                <svg
                  aria-hidden="true"
                  class="pf-c-dropdown__toggle-icon"
                  fill="currentColor"
                  height="1em"
                  role="img"
                  style="vertical-align:-0.125em"
                  viewBox="0 0 320 512"
                  width="1em"
                >
                  <path
                    d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                    transform=""
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card-pf-body"
  >
    <div
      class="kubevirt-alert__alerts-body"
    >
      <div
        class="kubevirt-alert__item"
      >
        <span
          aria-hidden="true"
          class="fa fa-exclamation-circle kubevirt-alert__icon kubevirt-alert__icon--critical"
        />
        <div
          class="kubevirt-alert__item-message"
        >
          Disk inaccessible on host ip-10-0-154-62.ec2.internal (device xvda)
        </div>
      </div>
      <div
        class="kubevirt-alert__item"
      >
        <span
          aria-hidden="true"
          class="fa fa-exclamation-triangle kubevirt-alert__icon kubevirt-alert__icon--warning"
        />
        <div
          class="kubevirt-alert__item-message"
        >
          Data recovery has been active for over 2h. Contact Support
        </div>
      </div>
    </div>
  </div>
</div>
`;
